# sml-cpp26

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.github/workflows/: ci.yml
docker/: Dockerfile  conan-profile-gcc16  conan-settings-user.yml
examples/: 01_side_by_side.cpp  02_exhaustiveness_demo.cpp
include/reflect_sml/: sml.hpp
